--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "prismjs": "^1.20.0",
     "vue": "^2.6.10",
+    "vue-prism-editor": "^0.6.1",
     "webextension-polyfill": "^0.3.1"
   },
   "devDependencies": {
