--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     }
   },
   "dependencies": {
+    "@johmun/vue-tags-input": "^2.1.0",
     "axios": "^0.19.0",
     "prismjs": "^1.20.0",
     "vue": "^2.6.10",
     "vue-prism-editor": "^0.6.1",
+    "vuejs-auto-complete": "^0.9.0",
     "webextension-polyfill": "^0.3.1"
   },
   "devDependencies": {
