--- a/src/manifest.json
+++ b/src/manifest.json
@@ -26,7 +26,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "css": ["style.css"]
+      "js": ["content.js"]
     }
   ]
 }
