--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,7 +9,7 @@
     "48": "icons/icon-48.png",
     "64": "icons/icon-64.png"
   },
-  "permissions": ["activeTab", "storage", "notifications", "clipboardRead", "clipboardWrite", "<all_urls>"],
+  "permissions": ["activeTab", "storage", "notifications", "clipboardRead", "clipboardWrite", "contextMenus", "<all_urls>"],
 
   "browser_action": {
     "default_title": "platypush",
