--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "platypush",
-  "description": "Web extension for interacting with one or more Platypush instances via browser",
+  "description": "Web extension for interacting with Platypush instances via browser and creating custom browser actions",
   "version": "0.1.3",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "manifest_version": 2,
@@ -8,7 +8,9 @@
     "16": "icons/icon-16.png",
     "32": "icons/icon-32.png",
     "48": "icons/icon-48.png",
-    "64": "icons/icon-64.png"
+    "64": "icons/icon-64.png",
+    "128": "icons/icon-128.png",
+    "256": "icons/icon-256.png"
   },
   "permissions": ["activeTab", "storage", "notifications", "clipboardRead", "clipboardWrite", "contextMenus", "<all_urls>"],
 
