--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@johmun/vue-tags-input": "^2.1.0",
     "@postlight/mercury-parser": "^2.2.0",
     "axios": "^0.19.0",
+    "babel-runtime": "^6.26.0",
     "prismjs": "^1.20.0",
     "vue": "^2.6.10",
+    "vue-markdown": "^2.2.4",
     "vue-prism-editor": "^0.6.1",
     "vuejs-auto-complete": "^0.9.0",
     "webextension-polyfill": "^0.3.1"
