--- a/src/manifest.json
+++ b/src/manifest.json
@@ -30,5 +30,67 @@
       "matches": ["*://*/*"],
       "js": ["content.js"]
     }
-  ]
+  ],
+  "commands": {
+    "user-command-0": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+0"
+      },
+      "description": "User command 0"
+    },
+    "user-command-1": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+1"
+      },
+      "description": "User command 1"
+    },
+    "user-command-2": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+2"
+      },
+      "description": "User command 2"
+    },
+    "user-command-3": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+3"
+      },
+      "description": "User command 3"
+    },
+    "user-command-4": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+4"
+      },
+      "description": "User command 4"
+    },
+    "user-command-5": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+5"
+      },
+      "description": "User command 5"
+    },
+    "user-command-6": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+6"
+      },
+      "description": "User command 6"
+    },
+    "user-command-7": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+7"
+      },
+      "description": "User command 7"
+    },
+    "user-command-8": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+8"
+      },
+      "description": "User command 8"
+    },
+    "user-command-9": {
+      "suggested_key": {
+        "default": "Ctrl+Alt+9"
+      },
+      "description": "User command 9"
+    }
+  }
 }
