--- a/src/manifest-chrome.json
+++ b/src/manifest-chrome.json
@@ -11,7 +11,7 @@
     "128": "icons/icon-128.png",
     "256": "icons/icon-256.png"
   },
-  "permissions": ["activeTab", "storage", "notifications", "clipboardRead", "clipboardWrite", "contextMenus", "<all_urls>"],
+  "permissions": ["activeTab", "storage", "notifications", "clipboardWrite", "contextMenus", "<all_urls>"],
 
   "browser_action": {
     "default_title": "platypush",
