--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@johmun/vue-tags-input": "^2.1.0",
-    "@postlight/mercury-parser": "^2.2.0",
+    "@postlight/parser": "^2.2.3",
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
     "prismjs": "^1.20.0",
@@ -61,7 +61,7 @@
     "file-loader": "^5.0.2",
     "husky": "^2.4.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.9.3",
+    "sass": "^1.89.1",
     "prettier": "^1.17.1",
     "pretty-quick": "^1.8.0",
     "sass-loader": "^7.1.0",
